--- a/index.html
+++ b/index.html
@@ -186,8 +186,34 @@
             </div>
         </section>
     </main>
-
+    <hr>
     <footer>
+        <h1><span><img src="./imgs/antoolsColorIcon.webp" alt="antoolsColorIcon"></span>antools.</h1>
+        <div>
+            <h4>Copyright 2021. Antools</h4>
+            <p>Antool is a web collection of information on paid or free Design and Development tools</p>
+        </div>
+
+        <div>
+            <h4>Contact Us</h4>
+            <p>+621987463</p>
+            <p>M Building, No.10 A</p>
+            <p>antools@awesome.com</p>
+        </div>
+
+        <div>
+            <h4>Categories</h4>
+            <p>Design</p>
+            <p>Development</p>
+        </div>
+
+        <div>
+            <h4>Company Info</h4>
+            <p>About Us</p>
+            <p>Our Partners</p>
+            <p>Blog</p>
+        </div>
+
 
     </footer>
 </body>
