--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
         <!--hero-->
     <header>
-        <div class="hero-nav.menu">
+        <section class="hero-nav.menu">
             <a class="logo"><img src="./imgs/logoA.webp" alt="logo"><span>antools.</span></a>
                 <nav class="nav.menu">
                     <a href="#">Home</a>
@@ -25,8 +25,8 @@
                 </nav>
             <a>Login</a>
             <button>Sign Up</button>
-        </div>
-        <div class="hero">
+        </section>
+        <section class="hero">
             <h2>Awesome tools for Designer & Developer<span>.</span></h2>
             <p>Antool is a web collection of information on paid or free Design and Development tools</p>
             <div class="header-input">
@@ -37,7 +37,7 @@
             <img src="./imgs/instagramIcon.webp" alt="instagramIcon">
             <img src="./imgs/twitterIcon.webp" alt="twitterIcon">
             <img src="" alt="illustration">
-        </div>
+        </section>
     </header>
 
         <!-- main -->
@@ -47,8 +47,9 @@
             <h2>Most Popular Tools</h2>
             <p>Tools for the best Designers and Developers most popularly used in the world</p>
             <!-- 1 -->
+        <ul>
             <div>
-                <img src="./imgs/figmaIcon.webp" alt="figmaIcon">
+                <img src="./imgs/figmaIcon.webp" alt="figmaIcon" width=64px height=64px>
                 <h3>FIGMA</h3>
                 <p>Free</p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -106,6 +107,7 @@
                 <img src="./imgs/folderIcon.webp" alt="folderIcon">
                 <a href="#">Visit</a>
             </div>
+        </ul>
             <button>Load more</button>
         </section>
 
@@ -187,6 +189,7 @@
         </section>
     </main>
     <hr>
+        <!-- footer -->
     <footer>
         <h1><span><img src="./imgs/antoolsColorIcon.webp" alt="antoolsColorIcon"></span>antools.</h1>
         <div>
@@ -213,8 +216,6 @@
             <p>Our Partners</p>
             <p>Blog</p>
         </div>
-
-
     </footer>
 </body>
 </html>
