--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <img src="./imgs/facebookIcon.webp" alt="facebookIcon">
             <img src="./imgs/instagramIcon.webp" alt="instagramIcon">
             <img src="./imgs/twitterIcon.webp" alt="twitterIcon">
-            <img src="" alt="illustration">
+            <img src="./imgs/illustration.webp" alt="illustration">
         </section>
     </header>
 
