--- a/index.html
+++ b/index.html
@@ -3,31 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        :root{
-            --background-color: #1E252B;
-            --brand-color-orange: #FF6E30;
-            --brand-color-lightGray: #283036;
-        }
-    </style>
+    <title>Antools</title>
+    <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
 </head>
 <body>
         <!--hero-->
     <header>
-        <section class="hero-nav.menu">
+    <div class="container">
+        <section class="hero-nav-menu">
             <a class="logo"><img src="./imgs/logoA.webp" alt="logo"><span>antools.</span></a>
-                <nav class="nav.menu">
+                <nav class="nav-menu">
                     <a href="#">Home</a>
                     <a href="#">Categories<span><img src="./imgs/down.webp" alt="down"></span></a>
                     <a href="#">My Collections</a>
                     <a href="#">Blog</a>
                 </nav>
-            <a>Login</a>
-            <button>Sign Up</button>
+            <div class="buttons-nav-menu">
+                <a>Login</a>
+                <button class="nav-menu-button">Sign Up</button>
+            </div>
         </section>
         <section class="hero">
-            <h2>Awesome tools for Designer & Developer<span>.</span></h2>
+            <h2 class="hero-tittle">Awesome tools for Designer & Developer<span class="orange">.</span></h2>
             <p>Antool is a web collection of information on paid or free Design and Development tools</p>
             <div class="header-input">
                 <input type="text" placeholder="find more than 430+ tools...">
@@ -38,12 +38,14 @@
             <img src="./imgs/twitterIcon.webp" alt="twitterIcon">
             <img src="./imgs/illustration.webp" alt="illustration">
         </section>
+    </div>
     </header>
 
         <!-- main -->
     <main>
         <!-- section1 -->
         <section>
+        <div class="container">
             <h2>Most Popular Tools</h2>
             <p>Tools for the best Designers and Developers most popularly used in the world</p>
             <!-- 1 -->
@@ -109,19 +111,23 @@
             </div>
         </ul>
             <button>Load more</button>
+        </div>
         </section>
 
         <!-- section2 -->
         <section>
+        <div class="container">
             <h2>Trusted more than 150+ brand</h2>
             <img src="./imgs/mikrosoftLogo.webp" alt="mikrosoftLogo">
             <img src="./imgs/googleLogo.webp" alt="googleLogo">
             <img src="./imgs/slackLogo.webp" alt="slackLogo">
             <img src="./imgs/wordpressLogo.webp" alt="wordpressLogo">
+        </div>
         </section>
 
         <!-- section3 -->
         <section>
+        <div class="container">
             <h2>Newcomer Tools</h2>
             <p>Wow! see the latest update of the most recommended tools from reliable designers and developers</p>
             <button>Explore more</button>
@@ -163,10 +169,12 @@
                 <img src="./imgs/folderIcon.webp" alt="folderIcon">
                 <a href="#">Visit</a>
             </div>
+        </div>
         </section>
 
         <!-- section4 -->
         <section>
+        <div class="container">
             <img src="./imgs/back.webp" alt="back">
             <img src="./imgs/ronald-richards.webp" alt="ronald-richards">
             <div>
@@ -176,21 +184,25 @@
             <p>Incididunt cillum do sint sint enim ullamco id deserunt mollit qui reprehenderit do. Velit ex tempor cillum ad sint occaecat. Do nulla velit labore occaecat do deserunt Lorem magna officia incididunt consectetur amet. Sunt consectetur veniam minim ex commodo sint non. Occaecat aute officia excepteur non laboris id qui ad.</p>
             <img src="./imgs/next.webp" alt="next">
             <img src="./imgs/pages.webp" alt="pages">
+        </div>
         </section>
 
         <!-- section5 -->
         <section>
+        <div class="container">
             <h2>Become a contributor?</h2>
             <p>Join us and get tips & tricks to become a great Designer and Developer</p>
             <div>
                 <input type="text" placeholder="Enter your email...">
                 <button>Join Us</button>
             </div>
+        </div>
         </section>
     </main>
     <hr>
         <!-- footer -->
     <footer>
+    <div class="container">
         <h1><span><img src="./imgs/antoolsColorIcon.webp" alt="antoolsColorIcon"></span>antools.</h1>
         <div>
             <h4>Copyright 2021. Antools</h4>
@@ -216,6 +228,7 @@
             <p>Our Partners</p>
             <p>Blog</p>
         </div>
+    </div>
     </footer>
 </body>
 </html>
