--- a/index.html
+++ b/index.html
@@ -27,16 +27,21 @@
             </div>
         </section>
         <section class="hero">
-            <h2 class="hero-tittle">Awesome tools for Designer & Developer<span class="orange">.</span></h2>
-            <p>Antool is a web collection of information on paid or free Design and Development tools</p>
+            <div class="hero-text">
+                <h2 class="hero-tittle">Awesome tools for Designer & Developer<span class="orange">.</span></h2>
+                <p class="hero-sentence">Antool is a web collection of information on paid or free Design and Development tools</p>
+            </div>
             <div class="header-input">
+                <img src="./imgs/search.webp" alt="searchIcon">
                 <input type="text" placeholder="find more than 430+ tools...">
                 <button class="input-button">Search</button>
             </div>
-            <img src="./imgs/facebookIcon.webp" alt="facebookIcon">
-            <img src="./imgs/instagramIcon.webp" alt="instagramIcon">
-            <img src="./imgs/twitterIcon.webp" alt="twitterIcon">
-            <img src="./imgs/illustration.webp" alt="illustration">
+            <div class="media">
+                <img src="./imgs/facebookIcon.webp" alt="facebookIcon">
+                <img src="./imgs/instagramIcon.webp" alt="instagramIcon">
+                <img src="./imgs/twitterIcon.webp" alt="twitterIcon">
+                <img src="./imgs/illustration.webp" alt="illustration">
+            </div>
         </section>
     </div>
     </header>
