--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             </div>
         </section>
         <section class="hero">
+        <div class="hhhero">
             <div class="hero-text">
                 <h2 class="hero-tittle">Awesome tools for Designer & Developer<span class="orange">.</span></h2>
                 <p class="hero-sentence">Antool is a web collection of information on paid or free Design and Development tools</p>
@@ -40,8 +41,9 @@
                 <img src="./imgs/facebookIcon.webp" alt="facebookIcon">
                 <img src="./imgs/instagramIcon.webp" alt="instagramIcon">
                 <img src="./imgs/twitterIcon.webp" alt="twitterIcon">
-                <img src="./imgs/illustration.webp" alt="illustration">
             </div>
+        </div>
+            <img src="./imgs/illustration.webp" alt="illustration">
         </section>
     </div>
     </header>
