--- a/index.html
+++ b/index.html
@@ -66,64 +66,88 @@
             <div class="line1">
                 <div class="card">
                     <img src="./imgs/figmaIcon.webp" alt="figmaIcon" width=64px height=64px>
-                    <h3>FIGMA</h3>
-                    <p>Free</p>
+                    <div class="card-headline">
+                        <h3>FIGMA</h3>
+                        <p class="free">Free</p>
+                    </div>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <img src="./imgs/likeIcon.webp" alt="likeIcon">
-                    <img src="./imgs/folderIcon.webp" alt="folderIcon">
-                    <a href="#">Visit</a>
+                    <div class="card-icons">
+                        <img src="./imgs/likeIcon.webp" alt="likeIcon">
+                        <img src="./imgs/folderIcon.webp" alt="folderIcon">
+                        <a href="#">Visit</a>
+                    </div>
                 </div>
                 <!-- 2 -->
                 <div class="card">
                     <img src="./imgs/logos_sketch.webp" alt="sketchIcon">
-                    <h3>Sketch</h3>
-                    <p>Trial & Paid</p>
+                    <div class="card-headline">
+                        <h3>Sketch</h3>
+                        <p class="free">Trial & Paid</p>
+                    </div>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <img src="./imgs/likeColorIcon.webp" alt="likeIcon">
-                    <img src="./imgs/folderIcon.webp" alt="folderIcon">
-                    <a href="#">Visit</a>
+                    <div class="card-icons">
+                        <img src="./imgs/likeColorIcon.webp" alt="likeIcon">
+                        <img src="./imgs/folderIcon.webp" alt="folderIcon">
+                        <a href="#">Visit</a>
+                    </div>
                 </div>
                 <!-- 3 -->
                 <div class="card">
                     <img src="./imgs/logos_visual-studio-code.webp" alt="vscodeIcon">
-                    <h3>Visual Studio Code</h3>
-                    <p>Free</p>
+                    <div class="card-headline">
+                        <h3>Visual Studio Code</h3>
+                        <p class="free">Free</p>
+                    </div>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <img src="./imgs/likeIcon.webp" alt="likeIcon">
-                    <img src="./imgs/folderIcon.webp" alt="folderIcon">
-                    <a href="#">Visit</a>
+                    <div class="card-icons">
+                        <img src="./imgs/likeIcon.webp" alt="likeIcon">
+                        <img src="./imgs/folderIcon.webp" alt="folderIcon">
+                        <a href="#">Visit</a>
+                    </div>
                 </div>
             </div>
             <!-- 4 -->
             <div class="line2">
                 <div class="card">
                     <img src="./imgs/notion.webp" alt="notionIcon">
-                    <h3>Notion</h3>
-                    <p>Free & Paid</p>
+                    <div class="card-headline">
+                        <h3>Notion</h3>
+                        <p>Free & Paid</p>
+                    </div>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <img src="./imgs/likeIcon.webp" alt="likeIcon">
-                    <img src="./imgs/folderIcon.webp" alt="folderIcon">
-                    <a href="#">Visit</a>
+                    <div class="card-icons">
+                        <img src="./imgs/likeIcon.webp" alt="likeIcon">
+                        <img src="./imgs/folderIcon.webp" alt="folderIcon">
+                        <a href="#">Visit</a>
+                    </div>
                 </div>
                 <!-- 5 -->
                 <div class="card">
                     <img src="./imgs/grommet-icons_slack.webp" alt="slackIcon">
-                    <h3>Slack</h3>
-                    <p>Free & Paid</p>
+                    <div class="card-headline">
+                        <h3>Slack</h3>
+                        <p>Free & Paid</p>
+                    </div>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <img src="./imgs/likeIcon.webp" alt="likeIcon">
-                    <img src="./imgs/folderIcon.webp" alt="folderIcon">
-                    <a href="#">Visit</a>
+                    <div class="card-icons">
+                        <img src="./imgs/likeIcon.webp" alt="likeIcon">
+                        <img src="./imgs/folderIcon.webp" alt="folderIcon">
+                        <a href="#">Visit</a>
+                    </div>
                 </div>
                 <!-- 6 -->
                 <div class="card">
                     <img src="./imgs/logos_invision-icon.webp" alt="invisionIcon">
-                    <h3>Invision</h3>
-                    <p>Free & Paid</p>
+                    <div class="card-headline">
+                        <h3>Invision</h3>
+                        <p>Free & Paid</p>
+                    </div>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <img src="./imgs/likeIcon.webp" alt="likeIcon">
-                    <img src="./imgs/folderIcon.webp" alt="folderIcon">
-                    <a href="#">Visit</a>
+                    <div class="card-icons">
+                        <img src="./imgs/likeIcon.webp" alt="likeIcon">
+                        <img src="./imgs/folderIcon.webp" alt="folderIcon">
+                        <a href="#">Visit</a>
+                    </div>
                 </div>
             </div>
         </ul>
