--- a/index.html
+++ b/index.html
@@ -65,10 +65,12 @@
         <ul>
             <div class="line1">
                 <div class="card">
-                    <img src="./imgs/figmaIcon.webp" alt="figmaIcon" width=64px height=64px>
-                    <div class="card-headline">
-                        <h3>FIGMA</h3>
-                        <p class="free">Free</p>
+                    <div class="card-top">
+                        <img src="./imgs/figmaIcon.webp" alt="figmaIcon" width=64px height=64px>
+                        <div class="card-headline">
+                            <h3>FIGMA</h3>
+                            <p class="free">Free</p>
+                        </div>
                     </div>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     <div class="card-icons">
@@ -79,10 +81,12 @@
                 </div>
                 <!-- 2 -->
                 <div class="card">
-                    <img src="./imgs/logos_sketch.webp" alt="sketchIcon">
-                    <div class="card-headline">
-                        <h3>Sketch</h3>
-                        <p class="free">Trial & Paid</p>
+                    <div class="card-top">
+                        <img src="./imgs/logos_sketch.webp" alt="sketchIcon">
+                        <div class="card-headline">
+                            <h3>Sketch</h3>
+                            <p class="free">Trial & Paid</p>
+                        </div>
                     </div>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     <div class="card-icons">
@@ -93,10 +97,12 @@
                 </div>
                 <!-- 3 -->
                 <div class="card">
-                    <img src="./imgs/logos_visual-studio-code.webp" alt="vscodeIcon">
-                    <div class="card-headline">
-                        <h3>Visual Studio Code</h3>
-                        <p class="free">Free</p>
+                    <div class="card-top">
+                        <img src="./imgs/logos_visual-studio-code.webp" alt="vscodeIcon">
+                        <div class="card-headline">
+                            <h3>Visual Studio Code</h3>
+                            <p class="free">Free</p>
+                        </div>
                     </div>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     <div class="card-icons">
@@ -109,10 +115,12 @@
             <!-- 4 -->
             <div class="line2">
                 <div class="card">
-                    <img src="./imgs/notion.webp" alt="notionIcon">
-                    <div class="card-headline">
-                        <h3>Notion</h3>
-                        <p>Free & Paid</p>
+                    <div class="card-top">
+                        <img src="./imgs/notion.webp" alt="notionIcon">
+                        <div class="card-headline">
+                            <h3>Notion</h3>
+                            <p>Free & Paid</p>
+                        </div>
                     </div>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     <div class="card-icons">
@@ -123,10 +131,12 @@
                 </div>
                 <!-- 5 -->
                 <div class="card">
-                    <img src="./imgs/grommet-icons_slack.webp" alt="slackIcon">
-                    <div class="card-headline">
-                        <h3>Slack</h3>
-                        <p>Free & Paid</p>
+                    <div class="card-top">
+                        <img src="./imgs/grommet-icons_slack.webp" alt="slackIcon">
+                        <div class="card-headline">
+                            <h3>Slack</h3>
+                            <p>Free & Paid</p>
+                        </div>
                     </div>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     <div class="card-icons">
@@ -137,10 +147,12 @@
                 </div>
                 <!-- 6 -->
                 <div class="card">
-                    <img src="./imgs/logos_invision-icon.webp" alt="invisionIcon">
-                    <div class="card-headline">
-                        <h3>Invision</h3>
-                        <p>Free & Paid</p>
+                    <div class="card-top">
+                        <img src="./imgs/logos_invision-icon.webp" alt="invisionIcon">
+                        <div class="card-headline">
+                            <h3>Invision</h3>
+                            <p>Free & Paid</p>
+                        </div>
                     </div>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     <div class="card-icons">
