--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <div class="card-icons">
                         <img src="./imgs/likeIcon.webp" alt="likeIcon">
                         <img src="./imgs/folderIcon.webp" alt="folderIcon">
-                        <a href="#">Visit</a>
+                        <button>Visit</button>
                     </div>
                 </div>
                 <!-- 2 -->
@@ -92,7 +92,7 @@
                     <div class="card-icons">
                         <img src="./imgs/likeColorIcon.webp" alt="likeIcon">
                         <img src="./imgs/folderIcon.webp" alt="folderIcon">
-                        <a href="#">Visit</a>
+                        <button>Visit</button>
                     </div>
                 </div>
                 <!-- 3 -->
@@ -108,7 +108,7 @@
                     <div class="card-icons">
                         <img src="./imgs/likeIcon.webp" alt="likeIcon">
                         <img src="./imgs/folderIcon.webp" alt="folderIcon">
-                        <a href="#">Visit</a>
+                        <button>Visit</button>
                     </div>
                 </div>
             </div>
@@ -119,14 +119,14 @@
                         <img src="./imgs/notion.webp" alt="notionIcon">
                         <div class="card-headline">
                             <h3>Notion</h3>
-                            <p>Free & Paid</p>
+                            <p class="free">Free & Paid</p>
                         </div>
                     </div>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     <div class="card-icons">
                         <img src="./imgs/likeIcon.webp" alt="likeIcon">
                         <img src="./imgs/folderIcon.webp" alt="folderIcon">
-                        <a href="#">Visit</a>
+                        <button>Visit</button>
                     </div>
                 </div>
                 <!-- 5 -->
@@ -135,14 +135,14 @@
                         <img src="./imgs/grommet-icons_slack.webp" alt="slackIcon">
                         <div class="card-headline">
                             <h3>Slack</h3>
-                            <p>Free & Paid</p>
+                            <p class="free">Free & Paid</p>
                         </div>
                     </div>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     <div class="card-icons">
                         <img src="./imgs/likeIcon.webp" alt="likeIcon">
                         <img src="./imgs/folderIcon.webp" alt="folderIcon">
-                        <a href="#">Visit</a>
+                        <button>Visit</button>
                     </div>
                 </div>
                 <!-- 6 -->
@@ -151,14 +151,14 @@
                         <img src="./imgs/logos_invision-icon.webp" alt="invisionIcon">
                         <div class="card-headline">
                             <h3>Invision</h3>
-                            <p>Free & Paid</p>
+                            <p class="free">Free & Paid</p>
                         </div>
                     </div>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     <div class="card-icons">
                         <img src="./imgs/likeIcon.webp" alt="likeIcon">
                         <img src="./imgs/folderIcon.webp" alt="folderIcon">
-                        <a href="#">Visit</a>
+                        <button>Visit</button>
                     </div>
                 </div>
             </div>
