--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                             <p class="free">Free</p>
                         </div>
                     </div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <p class="card-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     <div class="card-icons">
                         <img src="./imgs/likeIcon.webp" alt="likeIcon">
                         <img src="./imgs/folderIcon.webp" alt="folderIcon">
@@ -88,7 +88,7 @@
                             <p class="free">Trial & Paid</p>
                         </div>
                     </div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <p class="card-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     <div class="card-icons">
                         <img src="./imgs/likeColorIcon.webp" alt="likeIcon">
                         <img src="./imgs/folderIcon.webp" alt="folderIcon">
@@ -104,7 +104,7 @@
                             <p class="free">Free</p>
                         </div>
                     </div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <p class="card-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     <div class="card-icons">
                         <img src="./imgs/likeIcon.webp" alt="likeIcon">
                         <img src="./imgs/folderIcon.webp" alt="folderIcon">
@@ -122,7 +122,7 @@
                             <p class="free">Free & Paid</p>
                         </div>
                     </div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <p class="card-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     <div class="card-icons">
                         <img src="./imgs/likeIcon.webp" alt="likeIcon">
                         <img src="./imgs/folderIcon.webp" alt="folderIcon">
@@ -138,7 +138,7 @@
                             <p class="free">Free & Paid</p>
                         </div>
                     </div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <p class="card-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     <div class="card-icons">
                         <img src="./imgs/likeIcon.webp" alt="likeIcon">
                         <img src="./imgs/folderIcon.webp" alt="folderIcon">
@@ -154,7 +154,7 @@
                             <p class="free">Free & Paid</p>
                         </div>
                     </div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <p class="card-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     <div class="card-icons">
                         <img src="./imgs/likeIcon.webp" alt="likeIcon">
                         <img src="./imgs/folderIcon.webp" alt="folderIcon">
@@ -163,7 +163,7 @@
                 </div>
             </div>
         </ul>
-            <button>Load more</button>
+            <button class="load-more">Load more</button>
         </div>
         </section>
 
