--- a/index.html
+++ b/index.html
@@ -163,7 +163,9 @@
                 </div>
             </div>
         </ul>
+        <div class="button">
             <button class="load-more">Load more</button>
+        </div>
         </div>
         </section>
 
