--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <p>Tools for the best Designers and Developers most popularly used in the world</p>
             </div>
             <!-- 1 -->
-            <div class="line1">
+            <div class="card-line1">
                 <div class="card">
                     <div class="card-top">
                         <img src="./imgs/figmaIcon.webp" alt="figmaIcon" width=64px height=64px>
@@ -75,7 +75,7 @@
                     <div class="card-icons">
                         <img src="./imgs/likeIcon.webp" alt="likeIcon">
                         <img src="./imgs/folderIcon.webp" alt="folderIcon">
-                        <button>Visit</button>
+                        <button class="visitButton">Visit</button>
                     </div>
                 </div>
                 <!-- 2 -->
@@ -91,7 +91,7 @@
                     <div class="card-icons">
                         <img src="./imgs/likeColorIcon.webp" alt="likeIcon">
                         <img src="./imgs/folderIcon.webp" alt="folderIcon">
-                        <button>Visit</button>
+                        <button class="visitButton">Visit</button>
                     </div>
                 </div>
                 <!-- 3 -->
@@ -107,12 +107,12 @@
                     <div class="card-icons">
                         <img src="./imgs/likeIcon.webp" alt="likeIcon">
                         <img src="./imgs/folderIcon.webp" alt="folderIcon">
-                        <button>Visit</button>
+                        <button class="visitButton">Visit</button>
                     </div>
                 </div>
             </div>
             <!-- 4 -->
-            <div class="line2">
+            <div class="card-line2">
                 <div class="card">
                     <div class="card-top">
                         <img src="./imgs/notion.webp" alt="notionIcon">
@@ -125,7 +125,7 @@
                     <div class="card-icons">
                         <img src="./imgs/likeIcon.webp" alt="likeIcon">
                         <img src="./imgs/folderIcon.webp" alt="folderIcon">
-                        <button>Visit</button>
+                        <button class="visitButton">Visit</button>
                     </div>
                 </div>
                 <!-- 5 -->
@@ -141,7 +141,7 @@
                     <div class="card-icons">
                         <img src="./imgs/likeIcon.webp" alt="likeIcon">
                         <img src="./imgs/folderIcon.webp" alt="folderIcon">
-                        <button>Visit</button>
+                        <button class="visitButton">Visit</button>
                     </div>
                 </div>
                 <!-- 6 -->
@@ -157,7 +157,7 @@
                     <div class="card-icons">
                         <img src="./imgs/likeIcon.webp" alt="likeIcon">
                         <img src="./imgs/folderIcon.webp" alt="folderIcon">
-                        <button>Visit</button>
+                        <button class="visitButton">Visit</button>
                     </div>
                 </div>
             </div>
@@ -193,7 +193,7 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 <img src="./imgs/likeIcon.webp" alt="likeIcon">
                 <img src="./imgs/folderIcon.webp" alt="folderIcon">
-                <a href="#">Visit</a>
+                <button class="visitButton">Visit</button>
             </div>
             <div>
                 <img src="./imgs/phpstormIcon.webp" alt="phpstormIcon">
@@ -202,7 +202,7 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 <img src="./imgs/likeIcon.webp" alt="likeIcon">
                 <img src="./imgs/folderIcon.webp" alt="folderIcon">
-                <a href="#">Visit</a>
+                <button class="visitButton">Visit</button>
             </div>
             <div>
                 <img src="./imgs/toolboxIcon.webp" alt="toolboxIcon">
@@ -211,7 +211,7 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 <img src="./imgs/likeIcon.webp" alt="likeIcon">
                 <img src="./imgs/folderIcon.webp" alt="folderIcon">
-                <a href="#">Visit</a>
+                <button class="visitButton">Visit</button>
             </div>
             <div>
                 <img src="./imgs/procreateIcon.webp" alt="procreateIcon">
@@ -220,7 +220,7 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 <img src="./imgs/likeIcon.webp" alt="likeIcon">
                 <img src="./imgs/folderIcon.webp" alt="folderIcon">
-                <a href="#">Visit</a>
+                <button class="visitButton">Visit</button>
             </div>
         </div>
         </section>
